# utils

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
include/: window.hpp
include/console/: logger.hpp
include/math/: trigonometry.hpp
include/math/functions/: square_root.hpp
include/math/objects/: vector3d.hpp  vectors.hpp
include/recurring/console/: card.hpp  logger.hpp  text.hpp
include/recurring/core/: buffer_manager.hpp  node.hpp  opengl.hpp  renderer.hpp  window.hpp
include/recurring/math/: constants.hpp  trigonometry.hpp
include/recurring/math/functions/: basic.hpp  convert.hpp  square_root.hpp  trigonometric_functions.hpp
include/recurring/math/objects/: vector2d.hpp  vector3d.hpp  vector4d.hpp
include/recurring/utils/: api.hpp  error.hpp  string.hpp
include/rutils/console/: card.hpp  logger.hpp
include/rutils/core/: string.hpp
include/rutils/graphics/: buffer_manager.hpp  node.hpp  window.hpp
include/rutils/math/: trigonometry.hpp
include/rutils/math/functions/: basic.hpp  convert.hpp  trigonometric_functions.hpp
include/rutils/math/objects/: vector2d.hpp  vector3d.hpp  vector4d.hpp  vectors.hpp
source/: main.cpp  window.cpp
source/console/: logger.cpp
source/core/: buffer_manager.cpp  main.cpp  opengl.cpp  renderer.cpp  window.cpp
source/math/: functions.cpp  objects.cpp
source/utils/: string.cpp
tests/: CMakeLists.txt  debug_mode.cpp  math.cpp  print.cpp  string.cpp  window.cpp
